--- a/maket_div.html
+++ b/maket_div.html
@@ -63,22 +63,27 @@
         #h1 {
             font-size: 15px;
         }
-        #club{
-            width: 20px;
-            height: 30px;
-            border: #000066;
-            background: greenyellow;
+
+        #club {
+
+            border: 1px solid black;
+            background: yellowgreen;
+            width: 80px;
+            height: 60px;
+            vertical-align: middle;
+            display: table-cell;
+            text-align: center;
             position: fixed;
-            right: 0;
-            top:50;
+            right: 50px;
+            top: 50px;
         }
     </style>
 </head>
 
-<body> 
-    
+<body>
+
     <div class="header"> Привет участникам соревнований!</div>
-    <div #id="club"></div>
+    <div id="club">Вступить в клуб</div>
     <div style="background-color: yellow;">
         <div class="menu">
             <ul id="list">
@@ -158,7 +163,7 @@
     </div>
     <div class="footer"> Главное не победа, а участие!</div>
     </div>
-   
+
 </body>
 
 </html>
