--- a/div.html
+++ b/div.html
@@ -11,8 +11,9 @@
     border: 1px solid black; 
     background: yellowgreen;
     width: 80px; 
-    height: 60px;
+    height: 120px;
     vertical-align: middle;
+    line-height: 60px;
     display: table-cell;
     text-align: center;
     position: fixed;
