--- a/maket_div.html
+++ b/maket_div.html
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ФУТБОЛ</title>
     <style>
+        * {
+            margin: 0;
+        }
+
         .header,
         .footer {
             background: #86DAFF;
@@ -65,17 +69,15 @@
         }
 
         #club {
-
             border: 1px solid black;
             background: yellowgreen;
             width: 80px;
-            height: 60px;
-            vertical-align: middle;
-            display: table-cell;
+            height: 50px;
+            padding-top: 10px;
             text-align: center;
             position: fixed;
             right: 50px;
-            top: 50px;
+            top: 20px;
         }
     </style>
 </head>
