--- a/maket_grid.html
+++ b/maket_grid.html
@@ -1,15 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maket Grid</title>
     <style>
-        
+        .container {
+            display: grid;
+            border: solid red 1px;
+            grid-template-columns: 30% 1fr;
+            grid-template-rows: 10% 1fr 10%;
+        }
+
+        .header {
+            grid-row: 1;
+        }
+
+        .menu {
+            grid-column: 1;
+            grid-row: 2;
+            background-color: yellow;
+            margin: 0;
+            padding: 10px;
+            box-sizing: border-box;
+        }
+
+        .article {
+            grid-column: 2;
+            grid-row: 2;
+            background-color: white;
+            padding: 2px;
+            box-sizing: border-box;
+            text-align: justify;
+        }
+
+        .footer {
+            grid-column: 1;
+            grid-row: 3;
+        }
+
+        .header,
+        .footer {
+            grid-column: 1/3;
+            background: #86DAFF;
+            padding: 20px;
+            text-transform: uppercase;
+            text-align: center;
+            font-size: 25px;
+            font-weight: bold;
+            color: #000066;
+
+        }
+
+        .section {
+            font-size: 20px;
+            font-weight: bold;
+        }
+
+        .menu>.section {
+            text-align: left;
+        }
+
+        .article>.section {
+            text-align: center;
+            margin: 2px;
+        }
+
+        .image {
+            float: left;
+            margin: 5px;
+        }
     </style>
 </head>
+
 <body>
-    
+    <div class="container">
+        <header class="header">Привет участникам соревнований!</header>
+        <div class="menu">
+            <section class="section">Виды спорта:</section><br>
+            <a href="http://ru.sport-wiki.org/vidy-sporta/">
+                <li>Биатлон</li>
+                <li>Футбол</li>
+                <li>Хоккей</li>
+                <li>Стрельба</li>
+                <li>Конькобежный спорт</li>
+                <li>Художественная гимнастика</li>
+                <li>Фигурное катание</li>
+                <li>Синхронное плавание</li>
+                <li>Прыжки в высоту</li>
+                <li>Бокс</li>
+                <li>Волейбол</li>
+                <li>Гандбол</li>
+                <li>Кёрлинг</li>
+                <li>Теннис</li>
+                <li>Настольный теннис</li>
+                <li>Фехтование</li>
+                <li>Акробатика</li>
+                <li>Водное поло</li>
+                <li>Горнолыжный спорт</li>
+                <li>Дзюдо</li>
+                <li>Гребля</li>
+                <li>Дартс</li>
+            </a>
+        </div>
+        <article class="article">
+            <section class="section">Футбол</section>
+            <img class="image" src="football.png">
+            <p>Футбо́л — командный вид спорта, в котором целью является забить мяч
+                в
+                ворота соперника ногами или другими частями тела (кроме рук) большее количество раз, чем команда
+                соперника.
+                В настоящее время самый популярный и массовый вид спорта в мире.
+                Игрок, играющий в эту игру, — футболи́ст.</p>
+
+            <p>Согласно заявлению ФИФА, в 2001 году в футбол на планете играло около 250 миллионов человек. Из
+                них
+                более 20
+                миллионов — женщины. Зарегистрировано около 1,5 миллиона команд и 300 000 профессиональных
+                клубов.</p>
+
+            По заявлению президента ФИФА Й. Блаттера, общее количество игроков в мире в мае 2004 г. составило
+            250
+            млн
+            человек,что соответствует 4,1 % населения Земли. В распределении по странам на первом месте по числу
+            играющих в
+            футбол США (примерно 18 миллионов, из которых 40 % женщины), затем идут Индонезия (10 миллионов),
+            Мексика
+            (7,4 миллиона), Китай (7,2 миллиона), Бразилия (7 миллионов), Германия (6,2 миллиона), Бангладеш
+            (5,2
+            миллиона), Италия (4 миллиона), Россия (3,8 миллиона). Однако количество футболистов в той или иной
+            стране
+            вовсе не говорит о качестве футбола в разных частях мира. Так, чемпионаты мира по футболу выигрывали
+            исключительно европейские и южноамериканские сборные, а в Уругвае, который является двукратным
+            победителем
+            Кубка мира ФИФА, живёт меньше человек, чем в России зарегистрировано футболистов.
+
+            <p>В июле 2017 года Международная федерация футбола (ФИФА) заявила о планах к 2026 году увлечь
+                футболом
+                60
+                %
+                населения Земли. В развитие футбола ФИФА намерена вложить 4 миллиарда долларов.</p>
+            <p style="font-style: italic; text-align: right;"> &copy; Википедия</p>
+        </article>
+        <footer class="footer">Главное не победа, а участие!</footer>
+    </div>
+
 </body>
+
 </html>
