--- a/anketa_if.html
+++ b/anketa_if.html
@@ -1,15 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ANKETA</title>
 </head>
+
 <body>
     <script>
-        
+        let name = prompt('Введите вашу фамилию')
+        let firstname = prompt('Введите ваше имя')
+        let fullname = prompt('Введите ваше отчество')
+        let age = prompt('Ваш возраст')
+        let sex = confirm('Ваш пол мужской?')
+        alert('ФИО:' + name + firstname + fullname)
+        alert('ваш возраст в годах:' + age)
+        alert('ваш возраст в днях:' + age * 365)
+        alert('через 5 лет вам будет:' + (+age + +5))
+        if (sex === true) {
+            alert('ваш пол:' + 'Мужской');
+        }
+        else {
+            alert('ваш пол:' + 'Женский')
+        }
+        if (age < 60) {
+            alert('вы на пенсии:' + 'нет')
+        }
+        else {
+            alert('вы на пенсии:' + 'да')
+        }
+
     </script>
-    
+
 </body>
+
 </html>
