--- a/chess.html
+++ b/chess.html
@@ -6,51 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kasparov</title>
-    <style>
-
-        #kasparov {
-            color: black;
-            font-weight: bold;
-        }
-
-        #birthdate {
-            color: green;
-        }
-
-        #dates {
-            color: red;
-            font-weight: bolder;
-        }
-
-        #link::before {
-            content: url(extref.png);
-        }
-
-        a {
-            color: blue;
-            text-decoration: none;
-            font-weight: bolder;
-        }
-
-        #text {
-            color: blue;
-            font-style: italic;
-            margin: 2px;
-        }
-#kasparov, #birthdate, #dates,#link{
-    font-size: small;
-    line-height: 1;
-}
-    </style>
 </head>
 
 <body>
     <a name="top"></a>
     <p id="kasparov">Гарри Каспаров</p>
-    <p id="birthdate">Дата рождения: 13 апреля 1963 г.</p>
-    <p id="dates">Чемпион мира: 1985-1993</p>
+    <p class="dates">Дата рождения: 13 апреля 1963 г.</p>
+    <p class="dates">Чемпион мира: 1985-1993</p>
     <p id="link"> <a href="https://chesspro.ru/statistic/kasparov.shtml">Информация:</a></p>
-    <p id="text">Первый матч за звание чемпиона мира по шахматам Гарри Каспаров играл против чемпиона мира Анатолия
+    <p class="text">Первый матч за звание чемпиона мира по шахматам Гарри Каспаров играл против чемпиона мира Анатолия
         Карпова. До
         этого они в разных официальных соревнованиях сыграли три партии, которые закончились вничью. Для победы
         требовалось первым выиграть 6 партий. Такой регламент был введён в феврале 1977 года и по нему прошли два матча
@@ -58,7 +22,8 @@
         и в последующих партиях Каспаров изменил тактику: он стал играть на ничью в каждой партии и вынуждать Карпова
         играть за другой цвет против своих любимых схем. Последовала серия из семнадцати ничьих, но двадцать седьмую
         партию снова выиграл Карпов, которому теперь оставалось одно очко до победы в матче. Каспаров «размочил» счёт в
-        тридцать второй партии. В сорок первой партии Карпов был близок к выигрышу, но упустил его, а сорок седьмую и
+        тридцать второй партии.</p>
+    <p class="paragraph"> В сорок первой партии Карпов был близок к выигрышу, но упустил его, а сорок седьмую и
         сорок восьмую партии выиграл Каспаров. При счёте 5:3 15 февраля 1985 года президент ФИДЕ Флоренсио Кампоманес на
         пресс-конференции объявил о прекращении матча, мотивировав это исчерпанием физических и психических ресурсов
         участников, и повторном матче между этими же соперниками в 1985 году. При этом и Карпов, и Каспаров выразили
@@ -66,6 +31,21 @@
         матч только тогда, когда претендент получил шансы на победу.</p>
 
     <p><a href="#top">в начало страницы</a></p>
+    <script>
+        let element = document.getElementById('kasparov');
+        element.style.color = 'blue';
+        element.style.fontSize = '25px';
+        element.style.fontWeight = 'bolder';
+
+        let elem = document.getElementsByClassName("dates");
+        elem.style.fontSize = '18px';
+        elem.style.fontWeight = 'bold';
+
+        let p = document.getElementsByTagName('p')
+        p.style.border = 'solid.red.1px';
+
+
+    </script>
 </body>
 
 </html>
