--- a/JS_Home_work_6/index.html
+++ b/JS_Home_work_6/index.html
@@ -24,7 +24,7 @@
     <form>
       <div id="your-cart">Your cart - 00.00$</div>
       <input class="seach-input" placeholder="Search">
-      <a href="#" class="btn-search" onclick="forFilter()">Search</a>
+      <a href="#" class="btn-search">Search</a>
     </form>
   </header>
   <div class="container">
@@ -32,6 +32,33 @@
 
     <div class="wrapper row justify-content-center">
     </div>
+  </div>
+
+  <div class="main-container">
+    <div class="order">
+      <h1>Your Order</h1>
+      <a class="close-btn">&times</a>
+    </div>
+    <div class="item-information">
+      <div class="item-image">image</div>
+      <div class="item-title">title</div>
+      <div class="quantity-price">
+        <div class="minus-quantity">-</div>
+        <div class="common-price-quantity">
+          <div class="is-quantity">Quantity</div>
+          <div class="multiply">x</div>
+          <div class="is-price">Price</div>
+        </div>
+        <div class="plus-quantity">+</div>
+      </div>
+      <a class="delete-btn">Remove from order</a>
+    </div>
+
+    <div class="total-price">
+      <span>Total:</span>
+      <span>XXXXXX</span>
+    </div>
+    <a class="order-btn">Order</a>
   </div>
 
   <div id="template">
