--- a/index.html
+++ b/index.html
@@ -115,20 +115,20 @@
         <button>AC</button>
         <button>+/-</button>
         <button>&#37</button>
-        <button>:</button>
-        <button>7</button>
-        <button>8</button>
-        <button>9</button>
-        <button>x</button>
-        <button>4</button>
-        <button>5</button>
-        <button>6</button>
-        <button>-</button>
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
-        <button>+</button>
-        <button id="zero">0</button>
+        <button onclick="inputOperation('/')">/</button>
+        <button onclick="inputDigit(7)">7</button>
+        <button onclick="inputDigit(8)">8</button>
+        <button onclick="inputDigit(9)">9</button>
+        <button onclick="inputOperation('*')">x</button>
+        <button onclick="inputDigit(4)">4</button>
+        <button onclick="inputDigit(5)">5</button>
+        <button onclick="inputDigit(6)">6</button>
+        <button onclick="inputOperation('-')">-</button>
+        <button onclick="inputDigit(1)">1</button>
+        <button onclick="inputDigit(2)">2</button>
+        <button onclick="inputDigit(3)">3</button>
+        <button onclick="inputOperation('+')">+</button>
+        <button onclick="inputDigit(0)" id="zero">0</button>
         <button>.</button>
         <button>=</button>
     </div>
