--- a/index.html
+++ b/index.html
@@ -6,111 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
-    <style>
-        @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700');
-
-        body {
-            font-family: "Source Sans Pro", sans-serif;
-            background: #fbfbfb;
-            text-align: center;
-        }
-
-        .main {
-            margin: 0 auto;
-            height: auto;
-            display: grid;
-            grid-gap: 0;
-            font-size: 80px;
-            font-weight: 200;
-            grid-template-rows: 50px 100px 100px 100px 100px 100px 100px;
-            grid-template-columns: 100px 100px 100px 100px;
-            text-align: center;
-            box-shadow: 0 0 10px 0 rgba(125, 125, 125, 0.5);
-            margin-bottom: 50px;
-        }
-
-        button:active {
-            outline-style: none;
-
-        }
-
-        .buttons,
-        .screen {
-            grid-column: 1/5;
-            background: #535052;
-            margin: 0;
-
-        }
-
-        .screen {
-            text-align: right;
-            padding-right: 40px;
-            font-size: 80px;
-            padding-top: 12px;
-            background: #535052;
-            color: #fff;
-            border: 1px solid #535052;
-            user-select: auto;
-            cursor: text;
-        }
-
-        #zero {
-            grid-column: 1/3;
-        }
-
-        .buttons {
-            display: flex;
-            flex-direction: row;
-        }
-
-        .buttons button {
-            border-radius: 50%;
-            width: 20px;
-            height: 20px;
-        }
-
-        #close-btn {
-            background: red;
-        }
-
-        #hide-btn {
-            background: yellow;
-        }
-
-        #restore-btn {
-            background: green;
-        }
-
-        .main button:nth-of-type(4n),
-        .main button:last-child {
-            background: #FF9500;
-        }
-
-        .main button:nth-child(-n+3),
-        .main button:nth-child(-n+4),
-        .main button:nth-child(-n+5) {
-            background: #505050
-        }
-
-        .main button {
-            background: #b2b2b2;
-
-        }
-
-        .main button,
-        .screen {
-            color: white;
-        }
-    </style>
+    <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
     <div class="main">
-        <div class="buttons">
-            <button id="close-btn"></button>
-            <button id="hide-btn"></button>
-            <button id="restore-btn"></button>
-        </div>
         <div class="screen">0</div>
         <button>AC</button>
         <button onclick="plusMinus()">+/-</button>
