--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="main">
         <div class="screen">0</div>
-        <button>AC</button>
+        <button onclick="clear()">AC</button>
         <button onclick="plusMinus()">+/-</button>
         <button>&#37</button>
         <button onclick="inputOperation('/')">/</button>
