--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
     <div class="main">
         <div class="screen">0</div>
-        <button onclick="clear()">AC</button>
+        <button onclick="reset()">AC</button>
         <button onclick="plusMinus()">+/-</button>
-        <button>&#37</button>
+        <button onclick="percent()">&#37</button>
         <button onclick="inputOperation('/')">/</button>
         <button onclick="inputDigit(7)">7</button>
         <button onclick="inputDigit(8)">8</button>
@@ -30,7 +30,7 @@
         <button onclick="inputOperation('+')">+</button>
         <button onclick="inputDigit(0)" id="zero">0</button>
         <button onclick="inputRadix()">.</button>
-        <button>=</button>
+        <button onclick="equal()">=</button>
     </div>
 
     <script src="calculator.js"></script>
