--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Hello Weather</h1>
         <input><input>
     </header>
-    <div></div>
+    <div class="main-table"></div>
     <div></div>
     <div></div>
     <div></div>
